chore: initial commit with base project structure

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <!-- Frontend decorative elements -->
+    <!-- Decorative Elements -->
     <div class="decorative-ide">
         <svg width="120" height="80" viewBox="0 0 120 80" fill="none">
             <rect
@@ -275,7 +275,7 @@
         display: block;
     }
 
-    /* Frontend decorative elements */
+    /* Decorative Elements */
     .decorative-ide {
         position: absolute;
         top: 10%;
