--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -126,7 +126,7 @@
         </div>
     </div>
 
-    <!-- Frontend decorative elements -->
+    <!-- Decorative Elements -->
     <div class="decorative-browser">
         <svg width="100" height="70" viewBox="0 0 100 70" fill="none">
             <rect
@@ -349,7 +349,7 @@
         background-clip: text;
     }
 
-    /* Frontend decorative elements */
+    /* Decorative Elements */
     .decorative-browser {
         position: absolute;
         top: 15%;
