chore: initial commit with base project structure

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -34,7 +34,7 @@ const projects = [
             // "/images/mymovie-app/categories-ios.png",
             "/images/mymovie-app/search-ios.png",
         ],
-        codeUrl: "https://github.com/ezioeg/my-movie-app",
+        codeUrl: "https://github.com/ezioeg/mymovie-app",
         previewUrl: "#",
     },
     {
