chore: change about me

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -34,11 +34,11 @@
 
                 <p class="about-paragraph">
                     Desde entonces, he acumulado más de 6 años de experiencia
-                    desarrollando soluciones web y móviles, especializándome en
-                    Frontend con React, React Native y TypeScript. Enfocado en
-                    aplicar buenas prácticas y principios de desarrollo que
-                    aporten valor real al producto y al equipo, manteniendo
-                    siempre una visión pragmática.
+                    desarrollando aplicaciones web y móviles, especializándome
+                    en Frontend con React, React Native y TypeScript. Enfocado
+                    en aplicar buenas prácticas y principios de desarrollo que
+                    generen valor real al producto y al equipo, con una visión
+                    pragmática y orientada a resultados.
                     <span class="highlight"></span>
                 </p>
             </div>
