chore: add experience readmore links

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -40,19 +40,25 @@
                         ✔️ Reduje errores en producción del 22% al 3% gracias a mejoras
                         en rendimiento y arquitectura.
                     </p>
-                    <button class="learn-more">
-                        Saber más
-                        <svg
-                            width="16"
-                            height="16"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="2"
-                        >
-                            <polyline points="9,18 15,12 9,6"></polyline>
-                        </svg>
-                    </button>
+                    <a
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=Experiencia-,Software%20Engineer,Regi%C3%B3n%20Metropolitana%20de%20Santiago%2C%20Chile%20%C2%B7%20En%20remoto,-me%20ayud%C3%B3%20a"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <button class="learn-more">
+                            Saber más
+                            <svg
+                                width="16"
+                                height="16"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                            >
+                                <polyline points="9,18 15,12 9,6"></polyline>
+                            </svg>
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -74,7 +80,12 @@
                         ✔️ Reduje malas prácticas a menos del 5% mediante auditorías
                         y estandarización.
                     </p>
-                    <button class="learn-more">
+                    <a
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=12%20aptitudes%20m%C3%A1s-,Frontend%20Engineer,Provincia%20de%20Buenos%20Aires%2C%20Argentina%20%C2%B7%20En%20remoto,-me%20ayud%C3%B3%20a"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="learn-more"
+                    >
                         Saber más
                         <svg
                             width="16"
@@ -86,7 +97,7 @@
                         >
                             <polyline points="9,18 15,12 9,6"></polyline>
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
 
@@ -108,7 +119,12 @@
                         ✔️ Automatizé todo el sistema, desde planificación hasta
                         despliegue en Firebase, Google Play y App Store.
                     </p>
-                    <button class="learn-more">
+                    <a
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=14%20aptitudes%20m%C3%A1s-,Software%20Engineer,Caracas%2C%20Venezuela%20%C2%B7%20H%C3%ADbrido,-Caracas%2C%20Venezuela%20%C2%B7%20H%C3%ADbrido"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="learn-more"
+                    >
                         Saber más
                         <svg
                             width="16"
@@ -120,7 +136,7 @@
                         >
                             <polyline points="9,18 15,12 9,6"></polyline>
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
