chore: add experience readmore links

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -41,23 +41,22 @@
                         en rendimiento y arquitectura.
                     </p>
                     <a
-                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=Experiencia-,Software%20Engineer,Regi%C3%B3n%20Metropolitana%20de%20Santiago%2C%20Chile%20%C2%B7%20En%20remoto,-me%20ayud%C3%B3%20a"
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=Software%20Engineer,Chile%20%C2%B7%20Jornada%20completa"
                         target="_blank"
                         rel="noopener noreferrer"
+                        class="learn-more"
                     >
-                        <button class="learn-more">
-                            Saber más
-                            <svg
-                                width="16"
-                                height="16"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="currentColor"
-                                stroke-width="2"
-                            >
-                                <polyline points="9,18 15,12 9,6"></polyline>
-                            </svg>
-                        </button>
+                        Saber más
+                        <svg
+                            width="16"
+                            height="16"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="2"
+                        >
+                            <polyline points="9,18 15,12 9,6"></polyline>
+                        </svg>
                     </a>
                 </div>
             </div>
@@ -81,7 +80,7 @@
                         y estandarización.
                     </p>
                     <a
-                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=12%20aptitudes%20m%C3%A1s-,Frontend%20Engineer,Provincia%20de%20Buenos%20Aires%2C%20Argentina%20%C2%B7%20En%20remoto,-me%20ayud%C3%B3%20a"
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=12%20aptitudes%20m%C3%A1s-,Frontend%20Engineer,Epidata%20%C2%B7%20Jornada%20completa,-Epidata%20%C2%B7%20Jornada%20completa"
                         target="_blank"
                         rel="noopener noreferrer"
                         class="learn-more"
@@ -120,7 +119,7 @@
                         despliegue en Firebase, Google Play y App Store.
                     </p>
                     <a
-                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=14%20aptitudes%20m%C3%A1s-,Software%20Engineer,Caracas%2C%20Venezuela%20%C2%B7%20H%C3%ADbrido,-Caracas%2C%20Venezuela%20%C2%B7%20H%C3%ADbrido"
+                        href="https://www.linkedin.com/in/ezio-escalona/#:~:text=14%20aptitudes%20m%C3%A1s-,Software%20Engineer,Ubix%20Delivery%2C%20C.A.%20%C2%B7%20Jornada%20completa,-Ubix%20Delivery%2C%20C"
                         target="_blank"
                         rel="noopener noreferrer"
                         class="learn-more"
